# xlog

./: CMakeLists.txt  README  README.md
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.jdt.core.external.folders/: .location
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/FileSDKDemo/: .location  .markers
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/FileSDKDemo/.indexes/: properties.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/FileSDKDemo/.indexes/a0/d6/: properties.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/appcompat_v7/: .markers
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/appcompat_v7/.indexes/: properties.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/appcompat_v7/.indexes/af/: history.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/mstplib2-android-trunk/: .location  .markers
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/mstplib2-android-trunk/.indexes/: properties.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/xlog/: .markers
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/xlog/.indexes/: history.index  properties.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/xlog/.indexes/a0/de/: history.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/xlog/.indexes/af/: history.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/xlog/.indexes/e4/81/96/: history.index
Android/.metadata/.plugins/org.eclipse.core.resources/.projects/xlog/.indexes/e4/81/96/92/: history.index
Android/.metadata/.plugins/org.eclipse.core.resources/.root/: 3.tree
Android/.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
Android/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
Android/.metadata/.plugins/org.eclipse.debug.core/.launches/: FileSDKDemo.launch  xlog.launch
Android/.metadata/.plugins/org.eclipse.debug.ui/: launchConfigurationHistory.xml
Android/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
Android/.metadata/.plugins/org.eclipse.jdt.core/: 1136748259.index  2366934033.index  329908197.index  369101590.index  3845450867.index  externalLibsTimeStamps  nonChainingJarsCache  savedIndexNames.txt
Android/.metadata/.plugins/org.eclipse.jdt.core/.org.eclipse.jdt.core.external.folders/: .project
Android/.metadata/.plugins/org.eclipse.jdt.launching/: .install.xml  libraryInfos.xml
Android/.metadata/.plugins/org.eclipse.jdt.ui/: QualifiedTypeNameHistory.xml  dialog_settings.xml
Android/.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2017/12/50/: refactorings.history  refactorings.index
Android/.metadata/.plugins/org.eclipse.ui.workbench/: dialog_settings.xml  workingsets.xml
Android/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
Android/jni/: Android.mk  Application.mk  com_example_XLog.cpp
Android/xlog/: .project
Android/xlog/jni/: com_example_XLog.h
Android/xlog/res/values/: strings.xml
Android/xlog/src/com/example/: Level.java
Android/xlog/src/com/example/test/: MainActivity.java
BASE/src/: CMakeLists.txt
BASE/src/log/: BaseLog.cpp  BaseLog.h  EncryptInterface.h  EncryptLog.cpp  EncryptLog.h  LogBuffer.cpp  LogBuffer.h  LogFile.cpp  LogFile.h  MarsLog.cpp  MarsLog.h
BASE/src/utility/: autobuffer.cc  autobuffer.h  ptrbuffer.cc  ptrbuffer.h
BASE/test/: CMakeLists.txt  run_all_test.cpp
BASE/test/log/: LogAsyncTest.cpp  LogAsyncTest.h  LogSyncTest.cpp  LogSyncTest.h  log_basic_unittest.cpp  log_multi_thread_unittest.cpp
libs/Windows/vs2015/: PocoFoundation.lib  PocoFoundationd.lib  gtestmd.lib
scripts/: create_msvc_sln_2010.bat  create_msvc_sln_2015.bat
